usr/src/cmd/mdb/i86xpv/modules/xpv_psm/xpv_psm.c
@@ -22,6 +22,9 @@
  * Copyright 2009 Sun Microsystems, Inc.  All rights reserved.
  * Use is subject to license terms.
  */
+/*
+ * Copyright (c) 2013 by Delphix. All rights reserved.
+ */
 
 #include <mdb/mdb_modapi.h>
 #include <mdb/mdb_ks.h>
@@ -32,7 +35,12 @@
 
 #include "intr_common.h"
 
-static shared_info_t shared_info;
+typedef struct mdb_shared_info {
+	unsigned long evtchn_pending[sizeof (unsigned long) * NBBY];
+	unsigned long evtchn_mask[sizeof (unsigned long) * NBBY];
+} mdb_shared_info_t;
+
+static mdb_shared_info_t shared_info;
 static int have_shared_info;
 static uintptr_t evtchn_cpus_addr;
 static struct av_head avec_tbl[NR_IRQS];
@@ -109,8 +117,8 @@ update_tables(void)
 	/*
 	 * It's normal for this to fail with a domain dump.
 	 */
-	if (mdb_ctf_vread(&shared_info, "shared_info_t",
-	    shared_info_addr, 0) != -1)
+	if (mdb_ctf_vread(&shared_info, "shared_info_t", "mdb_shared_info_t",
+	    shared_info_addr, MDB_CTF_VREAD_QUIET) != -1)
 		have_shared_info = 1;
 
 	return (1);
@@ -255,18 +263,20 @@ evtchn_pending(int i)
 	return (!!TEST_EVTCHN_BIT(i, &shared_info.evtchn_pending[0]));
 }
 
+typedef struct mdb_xpv_psm_autovec {
+	dev_info_t *av_dip;
+} mdb_xpv_psm_autovec_t;
+
 static void
 print_bus(int irq)
 {
 	char parent[7];
 	uintptr_t dip_addr;
 	struct dev_info	dev_info;
-	struct autovec avhp;
+	mdb_xpv_psm_autovec_t avhp;
 
-	bzero(&avhp, sizeof (avhp));
-
-	if (mdb_ctf_vread(&avhp, "struct autovec",
-	    (uintptr_t)avec_tbl[irq].avh_link, 0) == -1)
+	if (mdb_ctf_vread(&avhp, "struct autovec", "mdb_xpv_psm_autovec_t",
+	    (uintptr_t)avec_tbl[irq].avh_link, MDB_CTF_VREAD_QUIET) == -1)
 		goto fail;
 
 	dip_addr = (uintptr_t)avhp.av_dip;
